--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ConnBanco",
+  "name": "ConnCrud",
   "description": "Conexão ao banco de  dados para operações CRUD",
   "version": "1.0",
   "require": {
