--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "conn/conn-crud",
   "description": "Conexão ao banco de  dados para operações CRUD",
   "version": "1.0",
+  "license": "MIT",
   "authors": [
     {
       "name": "Edinei J. Bauer",
