--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Conexão ao banco de  dados para operações CRUD",
   "type": "library",
   "license": "MIT",
-  "minimum-stability": "dev-master",
+  "minimum-stability": "dev",
   "authors": [
     {
       "name": "Edinei J. Bauer",
