--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "conn/conn-crud",
   "description": "Conexão ao banco de  dados para operações CRUD",
   "type": "library",
+  "version": "1.1.5",
   "license": "MIT",
   "minimum-stability": "dev",
   "authors": [
