--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
   "description": "Conexão ao banco de  dados para operações CRUD",
   "type": "library",
   "license": "MIT",
+  "prefer-stable" : true,
+  "minimum-stability": "dev",
   "authors": [
     {
       "name": "Edinei J. Bauer",
